RESOLVED FIXED159574
Fix client certificate authentication after r200463
https://bugs.webkit.org/show_bug.cgi?id=159574
Summary Fix client certificate authentication after r200463
Alex Christensen
Reported 2016-07-08 12:18:43 PDT
Fix client certificate authentication after r200463
Attachments
Patch (1.62 KB, patch)
2016-07-08 12:20 PDT, Alex Christensen
no flags
Patch (4.62 KB, patch)
2016-07-08 14:19 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-07-08 12:20:39 PDT
Alex Christensen
Comment 2 2016-07-08 14:19:49 PDT
WebKit Commit Bot
Comment 3 2016-07-08 14:21:32 PDT
Attachment 283198 [details] did not pass style-queue: ERROR: Source/WebKit2/Shared/Authentication/mac/AuthenticationManager.mac.mm:59: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4 2016-07-10 11:49:33 PDT
Comment on attachment 283198 [details] Patch Clearing flags on attachment: 283198 Committed r203040: <http://trac.webkit.org/changeset/203040>
WebKit Commit Bot
Comment 5 2016-07-10 11:49:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.