Fix client certificate authentication after r200463 https://bugs.webkit.org/show_bug.cgi?id=159574 <rdar://problem/26931006>

Patch by Alex Christensen <achristensen@webkit.org> on 2016-07-10
Reviewed by Sam Weinig.

Source/WebCore:

No new tests.  We really need a test for this

* platform/network/cf/CertificateInfo.h:
(WebCore::CertificateInfo::CertificateInfo):
(WebCore::CertificateInfo::trust):
Make sure we only get the trust for Trust type CertificateInfos.
If we mix up our types, we get unexpected nullptrs, which will cause authentication to fail.

Source/WebKit2:

* Shared/Authentication/mac/AuthenticationManager.mac.mm:
(WebKit::leafCertificate):
(WebKit::chain):
Handle the different types of CertificateInfos.

Canonical link: https://commits.webkit.org/177750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203040 268f45cc-cd09-0410-ab3c-d52691b4dbfc